k8s/prefer-node-affinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: with-node-affinity-deployment
  namespace: actions-runner-system
spec:
  replicas: 12
  selector:
    matchLabels:
      app: with-node-affinity
  template:
    metadata:
      labels:
        app: with-node-affinity
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - jenkins
      tolerations:
        - key: "worker-group"
          operator: "Equal"
          value: "cicd"
          effect: "NoSchedule"
      containers:
        - name: with-node-affinity
          image: registry.k8s.io/pause:2.0

---
#apiVersion: v1
#kind: Pod
#metadata:
#  name: with-node-affinity
#  namespace: actions-runner-system
#spec:
#  affinity:
#    nodeAffinity:
#      preferredDuringSchedulingIgnoredDuringExecution:
#        - weight: 1
#          preference:
#            matchExpressions:
#              - key: app
#                operator: In
#                values:
#                  - jenkins
#  tolerations:
#    - key: "worker-group"
#      operator: "Equal"
#      value: "cicd"
#      effect: "NoSchedule"
#  containers:
#    - name: with-node-affinity
#      image: registry.k8s.io/pause:2.0
---
#apiVersion: v1
#kind: Pod
#metadata:
#  name: with-node-affinity
#spec:
#  affinity:
#    nodeAffinity:
#      requiredDuringSchedulingIgnoredDuringExecution:
#        nodeSelectorTerms:
#          - matchExpressions:
#              - key: topology.kubernetes.io/zone
#                operator: In
#                values:
#                  - antarctica-east1
#                  - antarctica-west1
#      preferredDuringSchedulingIgnoredDuringExecution:
#        - weight: 1
#          preference:
#            matchExpressions:
#              - key: another-node-label-key
#                operator: In
#                values:
#                  - another-node-label-value
#  containers:
#    - name: with-node-affinity
#      image: registry.k8s.io/pause:2.0
