k8s/test-pod-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: heapdump
  namespace: flexibill
spec:
  containers:
    - name: with-node-affinity
      image: nginx
      volumeMounts:
        - mountPath: /data-dir
          name: heapdump
  volumes:
    - name: heapdump
      persistentVolumeClaim:
        claimName: flexibill-postxn-efs-claim

---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    component: agent
spec:
  containers:
    - name: with-node-affinity
      image: nginx
  nodeSelector:
    worker-group: cicd
    app: jenkins
  tolerations:
    - key: "worker-group"
      operator: Equal
      value: "cicd"
      effect: NoSchedule
