k8s/nginx-deployment-org.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: default
spec:
  ports:
    - name: nginx
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx
  sessionAffinity: None
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/group.name: nginx-ingress
    # alb.ingress.kubernetes.io/healthcheck-port: '8080'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:527378001267:certificate/03645320-e1bb-47b4-b9ad-dca6f61558ea
    alb.ingress.kubernetes.io/tags: Team=Platform Engineering,LegalEntity=Unzer GmbH,Project=Infra,CostCenter=109201088,Env=sbx,Owner=SRE
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: nginx
  name: nginx-ingress
  namespace: default
spec:
  ingressClassName: alb
  rules:
    - host: nginx.eks.sbx.unzer.io
      http:
        paths:
          - backend:
              service:
                name: nginx
                port:
                  number: 80
            path: /
            pathType: Prefix
   #- host: private-ngx.eks.sbx.unzer.io
   #  http:
   #    paths:
   #      - backend:
   #          service:
   #            name: nginx
   #            port:
   #              number: 80
   #        path: /
   #        pathType: Prefix
   #- host: private-vault.eks.sbx.unzer.io
   #  http:
   #    paths:
   #      - backend:
   #          service:
   #            name: nginx
   #            port:
   #              number: 80
   #        path: /
   #        pathType: Prefix
   #- host: argocdfargate.eks.sbx.unzer.io
   #  http:
   #    paths:
   #      - backend:
   #          service:
   #            name: nginx
   #            port:
   #              number: 80
   #        path: /
   #        pathType: Prefix
   #- host: nginx-test.eks.sbx.unzer.io
   #  http:
   #    paths:
   #      - backend:
   #          service:
   #            name: nginx
   #            port:
   #              number: 80
   #        path: /
   #        pathType: Prefix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: default
spec:
  replicas: 30
  selector:
    matchLabels:
      app: nginx
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: "0.2G"
            cpu: "100m"
          limits:
            memory: "0.2G"
            cpu: "100m"
